--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style/header.css">
-    <link rel="stylesheet" href="./style/main.css">
-    <link rel="stylesheet" href="./style/footer.css">
+    <link rel="stylesheet" href="./public/style/css/header.css">
+    <link rel="stylesheet" href="./public/style/css/main.css">
+    <link rel="stylesheet" href="./public/style/css/footer.css">
     <script src="https://kit.fontawesome.com/1ee2d1841d.js" crossorigin="anonymous"></script>
 </head>
 <body>
