ok, je teste ça chez moi

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </header>
     <main>
-        <section id="start">
+        <section id="start" class="color1">
             <div>
                 <img src="./public/assets/img/avataaars.svg" alt="avataaars">
             </div>
@@ -32,7 +32,7 @@
                 <P>Graphique Artist - Web Designer - Illustrator</P>
             </div>
         </section>
-        <section id="folio">
+        <section id="folio" class="color2">
             <h2>PORTFOLIO</h2>
             <div>
                 <div class="img_folio">
@@ -55,14 +55,14 @@
                 </div>
             </div>
         </section>
-        <section id="about">
+        <section id="about" class="color1">
             <h2>ABOUT</h2>
             <div>
                 <p>Freelancer is a free boostrap thme created by startbooststrap. The download includes the complete source file includes the complete source files including HTML, CSS, abd JavaScript as well as optional SASS stylesheets for easy customization.</p>
                 <p>You can create your own custom avatar for the masthead, change the icon is the dividers, and add your email addres to the contact form to maje it fully functional !</p>
             </div>
         </section>
-        <section id="contact">
+        <section id="contact" class="color2">
             <h2>CONTACT ME</h2>
             <form action="">
                 <input id="name" placeholder="Name" type="text">
