--- a/index.html
+++ b/index.html
@@ -66,9 +66,12 @@
             <h2>CONTACT ME</h2>
             <form action="">
                 <input id="name" placeholder="Name" type="text">
+                <hr>
                 <input id="email" type="text" placeholder="Email Adress">
+                <hr>
                 <input id="phone" placeholder="Phone Number" type="text">
-                <textarea name="" id="message">Message</textarea>
+                <hr>
+                <textarea name="" id="message" placeholder="Message"></textarea>
                 <button>Send</button>
             </form>
         </section>
