--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h3>LOCATION</h3>
                 </div>
                 <div>
-                    <p>2215 John Daniel Drive Clark MO 65243</p>
+                    <p>2215 John Daniel Drive <br> Clark MO 65243</p>
                 </div>
             </div>
             <div>
@@ -110,7 +110,7 @@
                     <h3>ABOUT FREELANCER</h3>
                 </div>
                 <div>
-                    <p>Freelance is a free to use, MIT licensed Bootstrap thme created by <span>Start Bootstrap</span>.</p>
+                    <p>Freelance is a free to use,<br> MIT licensed Bootstrap thme created by <br> <span>Start Bootstrap</span>.</p>
                 </div>
             </div>
         </div>
