--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <a href="#start">START CSS</a>
         </div>
         <div>
-            <a href="folio">PORTFOLIO</a>
-            <a href="about">ABOUT</a>
-            <a href="contact">CONTACT</a>
+            <a href="#folio">PORTFOLIO</a>
+            <a href="#about">ABOUT</a>
+            <a href="#contact">CONTACT</a>
         </div>
     </header>
     <main>
