--- a/index.html
+++ b/index.html
@@ -56,24 +56,28 @@
             </div>
         </section>
         <section id="about" class="color1">
-            <h2>ABOUT</h2>
             <div>
-                <p>Freelancer is a free boostrap thme created by startbooststrap. The download includes the complete source file includes the complete source files including HTML, CSS, abd JavaScript as well as optional SASS stylesheets for easy customization.</p>
-                <p>You can create your own custom avatar for the masthead, change the icon is the dividers, and add your email addres to the contact form to maje it fully functional !</p>
+                <h2>ABOUT</h2>
+                <div>
+                    <p>Freelancer is a free boostrap thme created by startbooststrap. The download includes the complete source file includes the complete source files including HTML, CSS, abd JavaScript as well as optional SASS stylesheets for easy customization.</p>
+                    <p>You can create your own custom avatar for the masthead, change the icon is the dividers, and add your email addres to the contact form to maje it fully functional !</p>
+                </div>
             </div>
         </section>
         <section id="contact" class="color2">
-            <h2>CONTACT ME</h2>
-            <form action="">
-                <input id="name" placeholder="Name" type="text">
-                <hr>
-                <input id="email" type="text" placeholder="Email Adress">
-                <hr>
-                <input id="phone" placeholder="Phone Number" type="text">
-                <hr>
-                <textarea name="" id="message" placeholder="Message"></textarea>
-                <button>Send</button>
-            </form>
+            <div>
+                <h2>CONTACT ME</h2>
+                <form action="">
+                    <input id="name" placeholder="Name" type="text">
+                    <hr>
+                    <input id="email" type="text" placeholder="Email Adress">
+                    <hr>
+                    <input id="phone" placeholder="Phone Number" type="text">
+                    <hr>
+                    <textarea name="" id="message" placeholder="Message"></textarea>
+                    <button>Send</button>
+                </form>
+            </div>
         </section>
     </main>
     <footer>
