--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div>
                     <h3>AROUND THE WEB</h3>
                 </div>
-                <div>
+                <div class="icone">
                     <div>
                         <i class="fa-brands fa-facebook-f"></i>
                     </div>
