--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Start</title>
     <link rel="stylesheet" href="./public/style/css/header.css">
     <link rel="stylesheet" href="./public/style/css/main.css">
     <link rel="stylesheet" href="./public/style/css/footer.css">
